[package]
name = "vision-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
glib = "0.18.4"
gst = { package = "gstreamer", version = "0.21.2" }
gst-app = { package = "gstreamer-app", version = "0.21.2" }
log = "0.4.20"
numpy = "0.19.0"
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
