[package]
name = "vision-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
glib = "0.18.4"
gst = { package = "gstreamer", version = "0.21.2" }
gst-app = { package = "gstreamer-app", version = "0.21.2" }
libc = { version = "0.2.153", optional = true }
log = "0.4.20"
numpy = "0.18.0"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
pyo3-tch = { version = "0.15.0", optional = true }
pyo3-log = "0.9.0"
tch = { version = "0.15.0", optional = true }
deepstream-sys = { path = "deepstream-sys", optional = true }
cust_raw = "0.11.3"

[features]
deepstream = ["dep:libc", "dep:pyo3-tch", "dep:tch", "dep:deepstream-sys"]

[workspace]
members = ["deepstream-sys"]
