[build-system]
requires = ["setuptools", "wheel", "setuptools-rust", "torch==2.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-stream"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
