[package]
name = "vision-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
glib = "0.18.4"
gst = { package = "gstreamer", version = "0.21.2" }
gst-app = { package = "gstreamer-app", version = "0.21.2" }
log = "0.4.20"
numpy = "0.18.0"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
pyo3-log = "0.9.0"
cust_raw = { version = "0.11.3", optional = true }

deepstream-sys = { path = "deepstream-sys", optional = true }
gst-cuda-sys = { path = "gst-cuda-sys", optional = true }

[features]
cuda = ["dep:cust_raw", "dep:gst-cuda-sys"]
deepstream = ["cuda", "dep:deepstream-sys"]

[workspace]
members = ["deepstream-sys", "gst-cuda-sys"]
