[package]
name = "gst-cuda-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
glib-sys = "0.18.0"
gst-sys = { package = "gstreamer-sys", version = "0.21.2" }
gst-video-sys = { package = "gstreamer-video-sys", version = "0.21.2" }
cust_raw = "0.11.3"
